--- a/.github/workflows/plato_auto_post.yml
+++ b/.github/workflows/plato_auto_post.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install selenium
+          pip install selenium webdriver-manager
           sudo apt-get update
           sudo apt-get install -y chromium-chromedriver
           sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
